# home_dashboard

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml
app/: config.py  main.py  models.py
app/routers/: ha_proxy.py  layout.py  moon.py  rooms.py  weather.py
app/static/css/: style.css
app/static/js/: app.js  chart.js  clock.js  moon.js  scene.js  weather.js
app/templates/: index.html
tests/: conftest.py  test_clock.py  test_config.py  test_forecast_chart.py  test_ha_proxy.py  test_layout.py  test_main.py  test_moon.py  test_rooms.py  test_weather.py
